--- a/index.html
+++ b/index.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi."
+    />
+    <title>Corso Web Developer - Epicode school</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css"
+      integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header><img src="assets/img/logo.png" class="img-logo" /></header>
+    <div class="background">
+      <div class="scritte">
+        <h1>Corso Web Developer</h1>
+        <p>
+          Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
+          arricchire il CV, tu pensa ad arricchire le tue competenze.
+        </p>
+        <input type="button" value="PARTIAMO!" class="bottone" />
+      </div>
+    </div>
+
+    <main>
+      <section>
+        <div class="article1">
+          <article>
+            <div class="img-notebook">
+              <img src="assets/img/notebook.jpg" />
+            </div>
+            <div class="paragrafo1">
+              <h4>Tutti ti cercheranno</h4>
+              <p>
+                Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+                quella che ti stimola di più.
+              </p>
+              <h4>Lavora dove vuoi</h4>
+              <p>Lavora da casa, in riva al mare o in montagna.</p>
+              <h4>Scegli il tuo ruolo</h4>
+              <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+              <h4>Lavoro in libertà</h4>
+              <p>
+                Non serve lavorare in ufficio per essere creatori di prodotti
+                digitali.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
