Modifiche al progetto

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=north_east"
+    />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -56,9 +60,84 @@
             </div>
           </article>
         </div>
+
+        <div class="article2">
+          <article>
+            <h4>Epicode garantisce</h4>
+            <p>
+              "3 mesi intensivi di corso che cambieranno radicalmente la tua
+              vita"
+            </p>
+            <blockquote>
+              <br />
+              <br />
+              <cite>
+                Mario Rossi <br />
+                CEO, Epicode
+              </cite>
+            </blockquote>
+          </article>
+        </div>
+
+        <div class="article3">
+          <article>
+            <div class="blocco1">
+              <img src="assets/img/foto1.jpg" />
+              <h4>Il tuo PC</h4>
+              <p>
+                Se vuoi diventare developer è l'unico strumento di cui hai
+                bisogno.
+              </p>
+            </div>
+            <div class="blocco2">
+              <img src="assets/img/foto2.jpg" />
+              <h4>Impara ora</h4>
+              <p>
+                Impara da chi diventerai tra qualche anno, e diventa una
+                rockstar come loro.
+              </p>
+            </div>
+            <div class="blocco3">
+              <img src="assets/img/foto3.jpg" />
+              <h4>Lavora subito</h4>
+              <p>
+                Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.
+              </p>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="foot">
+        <div class="foot-text">
+          <div>
+            <h2>Contattaci</h2>
+          </div>
+          <div class="lista">
+            <p>
+              <ion-icon name="call-sharp"></ion-icon>&nbsp; &nbsp;<a
+                href="javascript:void(0)"
+                >(+39) 11223456</a
+              >
+            </p>
+            <p>
+              <ion-icon name="mail-sharp"></ion-icon>&nbsp; &nbsp;<a
+                href="javascript:void(0)"
+                >info@epicode.school</a
+              >
+            </p>
+            <p>
+              <span class="material-symbols-outlined"> north_east </span>&nbsp;
+              &nbsp;Via Appia 1 - 00100 Roma (RM)
+            </p>
+          </div>
+        </div>
+        <hr />
+        <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a></p>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
