--- a/index.html
+++ b/index.html
@@ -64,18 +64,12 @@
         <div class="article2">
           <article>
             <h4>Epicode garantisce</h4>
-            <p>
+            <p class="corsivo">
               "3 mesi intensivi di corso che cambieranno radicalmente la tua
               vita"
             </p>
-            <blockquote>
-              <br />
-              <br />
-              <cite>
-                Mario Rossi <br />
-                CEO, Epicode
-              </cite>
-            </blockquote>
+            <p class="citazione">Mario Rossi</p>
+            <p class="citazione2">Ceo, Epicode</p>
           </article>
         </div>
 
@@ -109,34 +103,34 @@
       </section>
     </main>
 
-    <footer>
-      <div class="foot">
-        <div class="foot-text">
-          <div>
-            <h2>Contattaci</h2>
+    <footer class="foot">
+      <div class="foot-text">
+        <div>
+          <h2>Contattaci</h2>
+        </div>
+        <div class="lista">
+          <div class="indirizzo">
+            <p>
+              <ion-icon name="call-sharp"></ion-icon
+              ><a href="javascript:void(0)">(+39) 11223456</a>
+            </p>
           </div>
-          <div class="lista">
+          <div class="indirizzo">
             <p>
-              <ion-icon name="call-sharp"></ion-icon>&nbsp; &nbsp;<a
-                href="javascript:void(0)"
-                >(+39) 11223456</a
-              >
+              <ion-icon name="mail-sharp"></ion-icon
+              ><a href="javascript:void(0)">info@epicode.school</a>
             </p>
+          </div>
+          <div class="indirizzo">
             <p>
-              <ion-icon name="mail-sharp"></ion-icon>&nbsp; &nbsp;<a
-                href="javascript:void(0)"
-                >info@epicode.school</a
-              >
-            </p>
-            <p>
-              <span class="material-symbols-outlined"> north_east </span>&nbsp;
-              &nbsp;Via Appia 1 - 00100 Roma (RM)
+              <span class="material-symbols-outlined"> north_east </span>Via
+              Appia 1 - 00100 Roma (RM)
             </p>
           </div>
         </div>
-        <hr />
-        <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a></p>
       </div>
+      <hr />
+      <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a></p>
     </footer>
     <script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
