--- a/index.html
+++ b/index.html
@@ -104,33 +104,26 @@
     </main>
 
     <footer class="foot">
-      <div class="foot-text">
-        <div>
-          <h2>Contattaci</h2>
-        </div>
-        <div class="lista">
-          <div class="indirizzo">
-            <p>
-              <ion-icon name="call-sharp"></ion-icon
-              ><a href="javascript:void(0)">(+39) 11223456</a>
-            </p>
-          </div>
-          <div class="indirizzo">
-            <p>
-              <ion-icon name="mail-sharp"></ion-icon
-              ><a href="javascript:void(0)">info@epicode.school</a>
-            </p>
-          </div>
-          <div class="indirizzo">
-            <p>
-              <span class="material-symbols-outlined"> north_east </span>Via
-              Appia 1 - 00100 Roma (RM)
-            </p>
-          </div>
-        </div>
+      <div>
+        <h2>Contattaci</h2>
       </div>
+      <div class="indirizzo">
+        <ion-icon name="call-sharp" class="foot-icon"></ion-icon
+        ><a href="javascript:void(0)">(+39) 11223456</a>
+      </div>
+      <div class="indirizzo">
+        <ion-icon name="mail-sharp" class="foot-icon"></ion-icon
+        ><a href="javascript:void(0)">info@epicode.school</a>
+      </div>
+      <div class="indirizzo">
+        <span class="material-symbols-outlined"> north_east </span>Via Appia 1 -
+        00100 Roma (RM)
+      </div>
+
       <hr />
-      <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a></p>
+      <p class="copyright">
+        &copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a>
+      </p>
     </footer>
     <script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
