--- a/Progetto_mobile/index.html
+++ b/Progetto_mobile/index.html
@@ -39,9 +39,6 @@
       <section>
         <div class="article1">
           <article>
-            <div class="img-notebook">
-              <img src="assets/img/notebook.jpg" />
-            </div>
             <div class="paragrafo1">
               <h4>Tutti ti cercheranno</h4>
               <p>
@@ -50,6 +47,11 @@
               </p>
               <h4>Lavora dove vuoi</h4>
               <p>Lavora da casa, in riva al mare o in montagna.</p>
+            </div>
+            <div class="img-notebook">
+              <img src="assets/img/notebook.jpg" />
+            </div>
+            <div class="paragrafo2">
               <h4>Scegli il tuo ruolo</h4>
               <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
               <h4>Lavoro in libertà</h4>
